style.css
@font-face {
  font-family: "Ninna";
  font-weight: normal;
  font-style: normal;
  font-display: swap;
  src: url("/ninna.woff2") format("woff2");
}

@font-face {
  font-family: "GT America";
  font-weight: normal;
  font-style: normal;
  font-display: swap;
  src: url("/gt-america.woff2");
}

@font-face {
  font-family: "GT America Mono";
  font-weight: normal;
  font-style: normal;
  font-display: swap;
  src: url("/gt-america-mono.woff2");
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

html:focus-within {
  scroll-behavior: smooth;
}

body {
  font-family: "Ninna";
  display: grid;
  justify-items: center;
  min-height: 100vh;
  margin: 0;
  padding-top: 8rem;
  padding-bottom: 8rem;
  animation: drift 30s linear infinite;
  color: #010101;
  background-color: hsl(30, 12%, 97%);

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body:before {
  position: absolute;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  width: 100vw;
  height: 100vh;
  content: "";
  pointer-events: none;
  border: .75rem solid currentColor;
}

@keyframes drift {
  from {
    background-position-x: 0;
  }

  to {
    background-position-x: 100vw;
  }
}

::selection {
  background-color: hsla(249, 33%, 88%, 40%);
}

h1 {
  font-size: clamp(2.3rem, 9vw, 3.8rem);
  font-weight: normal;
  line-height: 1.1;
  max-width: 18ch;
  text-align: center;
  text-transform: uppercase;
  color: hsl(0, 0%, 1%);
}

h1:first-letter {
  font-feature-settings: "swsh";
}

h1 em {
  font-style: normal;
  font-feature-settings: "ss07", "ss12";
  color: hsl(87, 17%, 60%);

}

a {
  position: relative;
  color: inherit;
}

.decorated:before {
  position: absolute;
  left: -1.25rem;
  display: block;
  content: "✍";
}

p {
  max-width: 22ch;
  padding: 1rem;
  text-align: center;
}

aside {
  font-size: 4rem;
  font-feature-settings: "ss14";
  color: hsl(87, 17%, 60%);

}

main {
  margin-top: 5rem;
}

nav {
  font-family: "GT America Mono";
  font-size: 0.85rem;
  position: sticky;
  top: 0;
  display: none;
  overflow: scroll;
  align-self: start;
  height: 100vh;
  margin-top: -5rem;
  padding-top: 5rem;
}

nav::-webkit-scrollbar {
  display: none;
}

nav>span {
  display: block;
  margin-bottom: 1rem;
}

nav>ol {
  margin: 0 0 2rem;
  padding: 0;
  list-style-type: none;
}

nav li {
  margin-bottom: 0.5em;
}

nav a {
  text-decoration: none;
  color: hsl(74, 16%, 39%);
}

nav a:hover,
nav a:active {
  text-decoration: underline;
  color: #010101;
}

nav time {
  margin: 0;
  text-transform: lowercase;
}

article {
  font-family: "GT America";
  font-size: 1rem;
  line-height: 1.5;
  max-width: 40ch;
  margin-bottom: 3rem;
  scroll-margin-top: 5rem;
  padding-inline: 1.75rem;
  text-align: justify;
}

article:not(:last-child):after {
  font-family: "Ninna";
  font-size: 3rem;
  font-feature-settings: "ss14";
  display: block;
  content: "&";
  text-align: center;
  color: hsl(87, 17%, 60%);

}

time {
  font-family: "GT America Mono";
  font-size: 0.75rem;
  line-height: 1.5;
  display: block;
  margin-bottom: 2rem;
  text-align: left;
  text-transform: uppercase;
  text-wrap: balance;
}

pre {
  font-family: inherit;
  font-size: 0.85rem;
  margin-top: 0;
  margin-bottom: 2rem;
  white-space: pre-line;
}

pre~a {
  font-family: "GT America Mono";
  font-size: .75rem;
  display: inline-block;
  margin-bottom: 2rem;
  text-transform: uppercase;
}

pre~address {
  font-family: "GT America Mono";
  font-size: .75rem;
  display: inline-block;
  margin-bottom: 3rem;

}

pre~address:before {
  padding-right: 1.5ch;
  content: "❦";
}

.secret {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  width: 1px;
  height: auto;
  margin: 0;
  padding: 0;
  white-space: nowrap;
  border: 0;
}

.extended time {
  max-width: 40ch;
  text-wrap: balance;
}

@media (min-width: 955px) {

  main.home {
    display: grid;
    grid-column-gap: 9rem;
    grid-template-columns: 1fr auto 1fr;
  }

  nav {
    display: block;
  }

  .extended {
    max-width: calc(80ch + 2rem);
  }

  .extended pre {
    gap: 2rem;

    columns: 2;
  }
}

@media (min-width: 1212px) {
  body:after {
    position: absolute;
    position: fixed;
    top: 0;
    left: 0;
    width: 7.5rem;
    height: 100vh;
    content: "";
    background-image: url('/gradient.jpg');
    background-attachment: fixed;
    background-size: cover;
  }
}

